// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ class-constructor.ts 1`] = `
Object {
  "nodes": Array [
    ClassParseResult {
      "constructors": Array [
        ConstructorParseResult {
          "accessibility": "public",
          "documentation": "",
          "documentationTags": Array [],
          "id": "constructor",
        },
      ],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": null,
      "id": "ClassConstructor",
      "implementedInterfaces": Array [],
      "methods": Array [],
      "properties": Array [],
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ class-extends.ts 1`] = `
Object {
  "nodes": Array [
    ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedClass": null,
      "id": "A",
      "implementedInterfaces": Array [],
      "methods": Array [],
      "properties": Array [],
    },
    ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": "A",
      "id": "ClassExtends",
      "implementedInterfaces": Array [],
      "methods": Array [],
      "properties": Array [],
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ class-implements.ts 1`] = `
Object {
  "nodes": Array [
    InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "A",
      "methods": Array [],
    },
    InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "B",
      "methods": Array [],
    },
    ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": null,
      "id": "ClassImplements",
      "implementedInterfaces": Array [
        "A",
        "B",
      ],
      "methods": Array [],
      "properties": Array [],
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ class-methods.ts 1`] = `
Object {
  "nodes": Array [
    ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": null,
      "id": "ClassMethods",
      "implementedInterfaces": Array [],
      "methods": Array [
        MethodParseResult {
          "accessibility": "public",
          "documentation": "",
          "documentationTags": Array [],
          "id": "a",
          "parameters": Array [],
          "returnType": "Promise<void>",
        },
        MethodParseResult {
          "accessibility": "protected",
          "documentation": "",
          "documentationTags": Array [],
          "id": "b",
          "parameters": Array [
            ParameterParseResult {
              "documentation": "",
              "documentationTags": Array [],
              "id": "a",
              "type": "number",
            },
          ],
          "returnType": "Promise<string>",
        },
        MethodParseResult {
          "accessibility": "private",
          "documentation": "",
          "documentationTags": Array [],
          "id": "c",
          "parameters": Array [
            ParameterParseResult {
              "documentation": "",
              "documentationTags": Array [],
              "id": "a",
              "type": "string",
            },
          ],
          "returnType": "string",
        },
      ],
      "properties": Array [],
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ class-mixed-extends-and-implements.ts 1`] = `
Object {
  "nodes": Array [
    ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedClass": null,
      "id": "A",
      "implementedInterfaces": Array [],
      "methods": Array [],
      "properties": Array [],
    },
    InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "B",
      "methods": Array [],
    },
    InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "C",
      "methods": Array [],
    },
    ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": "A",
      "id": "ClassMixedExtendsAndImplements",
      "implementedInterfaces": Array [
        "B",
        "C",
      ],
      "methods": Array [],
      "properties": Array [],
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ class-properties.ts 1`] = `
Object {
  "nodes": Array [
    ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": null,
      "id": "ClassProperties",
      "implementedInterfaces": Array [],
      "methods": Array [],
      "properties": Array [
        PropertyParseResult {
          "documentation": "",
          "documentationTags": Array [],
          "id": "a",
          "type": "number",
        },
        PropertyParseResult {
          "documentation": "",
          "documentationTags": Array [],
          "id": "b",
          "type": "string | number",
        },
        PropertyParseResult {
          "documentation": "",
          "documentationTags": Array [],
          "id": "c",
          "type": "Promise<boolean>",
        },
        PropertyParseResult {
          "documentation": "",
          "documentationTags": Array [],
          "id": "d",
          "type": "() => string | number",
        },
        PropertyParseResult {
          "documentation": "",
          "documentationTags": Array [],
          "id": "e",
          "type": "(a: number) => number",
        },
      ],
    },
  ],
}
`;
